[tool.poetry]
name = "jetblack-asgi-typing"
version = "0.4.0"
description = "Just the types for ASGI"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "asgi_typing" }
]
repository = "https://github.com/rob-blackbourn/jetblack-asgi-typing"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.9"
mypy = "^0.910"
rope = "^0.14"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
